--- a/main.html
+++ b/main.html
@@ -4,13 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Git</title>
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	"My intro to Git and colab"
 </body>
 
 </html>
